# GPU-programming

./: .gitignore  animation.py  description.txt  dunefield.py
DunefieldModelBase/: Baas2002.cs  Chart.cs  ChartAxis.cs  DunefieldModelBase.csproj  Field.cs  FindSlope.cs  Form1.Designer.cs  Magnifier.Designer.cs  Model with flux.cs  Model.cs  Slider.cs  VariationTwo.cs  WernerModified.cs  app.config
DunefieldModelBase/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Dunefield_CPU/: CMakeLists.txt
Dunefield_CPU/Debug/: cpu_dunefield.cp39-win_amd64.pyd
Dunefield_CPU/include/: Field.h  mersenne_twister.h  python_binding.h
Dunefield_CPU/src/: Cell.cpp  Field.cpp  main.cpp
Dunefield_GPU/: CMakeLists.txt
Dunefield_GPU/Debug/: gpu_dunefield.cp39-win_amd64.pyd
Dunefield_GPU/include/: field.h  gpu.h  gpu_func.h  python_binding.h
Dunefield_GPU/src/: dunefield.cu  field.cu  gpu.cu  gpu_func.cu
Dunefield_example/: Chart.Designer.cs  ChartAxis.Designer.cs  DataSeries.cs  DunefieldModel.sln  Field.Designer.cs  Form1.cs  Form1.resx  Legend.cs  Magnifier.cs  Momiji2000.cs  OpenBalancedFlux.cs  Program.cs  Readme.md  SandPile.cs  Slider.Designer.cs  Universal.cs  VariationOne.cs  Werner1995.cs
Dunefield_own/: CMakeLists.txt
Dunefield_own/include/: Cell.h  Field.h  mersenne_twister.h  python_binding.h  random_gen.h
Dunefield_own/src/: Cell.cpp  Field.cpp  main.cpp
Sand_dune_modelling/: CMakeLists.txt
Sand_dune_modelling/include/: Cell.h  Field.h
Sand_dune_modelling/src/: main.cpp
